app/assets/stylesheets/white_theme/variables.scss
// layout

$desktop-site-width: 90%;    // used for width on inner footer, inner header, user pages, user lists
$efficient-site-width: 96%;  // replaces above width for efficient media queries
@mixin match-variable-site-width() {
  margin-left: auto;
  margin-right: auto;
  width: $desktop-site-width;
  @media #{$efficient} {
    width: $efficient-site-width;
  }
}

$baseline: 27px; // greenfield voodoo, promises design balance

// media

$efficient: 'only screen and (max-width: 420px)';
$mobile: 'only screen and (max-width: 640px)';

// site colors

$body-background-color: #FBFBFB;
$box-background-color: #FFFFFF;

// fonts

$black-font: 'Alright Sans Black', sans-serif;
$sans-font: 'Alright Sans', sans-serif; // "Alright Sans Bold" exists for font-weight: bold or <strong>
$serif-font: 'Harriet Text', serif;

// colors ( how many of these are used, useful? )

$black: #000000;
$not-quite-black: #353535;
$medium-gray: #666666;
$light-medium-gray: #888888;
$gray: #999999;
$silver: #C7C8C7;
$samo-gray: #A6A6A6;
$lightest-gray: #C7C6C3;
$light-gray: #EEEEEE;
$samo-gray: #F2F2F2;
$white: #FFFFFF;
$red: #D3220C;
$green: #66A410;
$orange: #DA6D25;
$orange-background: #E66D29;
$samo-orange: #CC6600;
$nav-item-color: #C1C9B4;
$tab-box-silver: #FFFFFF;
$playlist-box-silver: #FFFFFF;
$box-background-even: #FFFFFF;
$not-quite-white: #F9F9F9;
$not-quite-white-opaque: #F9F9F9; // to mask background
$disabled: #8C8E86;
$body-link-hover: #1A1D13;
$waveform-playing: #302F2F;
$bright-highlight: rgba(255, 255, 0, .6);

// SAMO

@mixin samo-shadow-and-radius() {
  border-radius: 4px;
  box-shadow: 0px 3px 4px -2px #65666612;
}

@mixin default-button($type: '') {
  font-family: $sans-font;
  font-size: 12px;
  font-weight: normal;
  line-height: 24px;
  display: inline-block;
  box-sizing: border-box;
  height: 23px;
  padding: 0 14px;
  text-align: center;
  text-decoration: none;
  border: 1.25px solid $light-medium-gray;
  border-radius: 6px;
  @if $type == 'admin' {
    background-color: rgba(218, 109, 37, .15);
  }
  &:hover {
    transition: border-color .1s ease-in-out;
    text-decoration: none;
    border: 1.25px solid $black;
  }
}

